# jpeg-compare

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  _test_comp.ppm  _test_jpeg.cpp  _test_orig.ppm  a.ppm  b.ppm  manifest.md  t.ppm  t2.ppm  test_pdf.py
data/wallpapers/: README.txt
data/wallpapers_split/: merge.bat
docs/: BUILD_GUIDE.md  CROSS_PLATFORM_GUIDE.md
examples/: jpeg_compress.cpp  jpeg_quality.cpp
lib/jpegli/: jpegli-static.lib  zlib.lib
lib/jpegli/include/jpegli/: jconfig.h  jpegli_cms_export.h  jpegli_threads_export.h
lib/mozjpeg/: jpeg.lib  turbojpeg.lib
lib/mozjpeg/include/: jconfig.h
src/: download_wallpapers.py
src/scripts/: build_jpegli.ps1
